src/tests/fixtures/field_definitions/FieldTagOnIncorrectNode.ts.expected
-----------------
INPUT
----------------- 
class SomeType {
  /** @gqlField */
  constructor() {
    //
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/FieldTagOnIncorrectNode.ts:3:3 - error: `@gqlField` can only be used on method/property declarations, signatures, or function declarations.

If you think Grats should be able to infer this field, please report an issue at https://github.com/captbaritone/grats/issues.

3   constructor() {
    ~~~~~~~~~~~~~~~
4     //
  ~~~~~~
5   }
  ~~~
